# anamorphX

./: .gitignore  Dockerfile  LICENSE  README.md  README_ENTERPRISE_ANAMORPH_SERVER.md  REPOSITORY_INFO.md  Readme.md  RoadMap.md  TT.md  anamorph_runner.py  console_run.py  dostets.py  enterprise_config.yaml  enterprise_neural_server.py  neural_web_server.py  neural_web_server_utf8.py  progress_report.md  pyproject.toml  quick_start.py  quick_start_config.yaml  real_neural_server.py  realtime_neural_server.py  requirements.txt  run_anamorph.py  run_anamorph_server.py  run_enterprise_anamorph_server.py  simple_runner.py  Этапная_реализация_anamorphX.md
Project/: README.md  api_handlers.anamorph  config.anamorph  enterprise_web_server.anamorph  web_server.anamorph
archive/experiments/: full_multilang_ml_ide.py  full_multilang_ml_ide_part2.py  full_ui_test.py  i18n_system.py  ui_demo.py  (+2 more)
demo/: neural_backend_demo.py  transformer_demo.py
docs/: COMPREHENSIVE_OVERVIEW.md  DEVELOPER_GUIDE.md  QUICK_START_GUIDE.md  REPOSITORY_INFO.md  ROADMAP.md  STATUS.md  STRUCTURE.md  TT.md  api_specification.yaml  architecture.md  enhanced_architecture.md  enhanced_command_spec.md  grammar.ebnf  language_spec.md  security_requirements.md  signal_model.md  signal_schema_standard.md  Критические недоработки.md
examples/: dev_tools_demo.py  full_web_server.amph  lexer_demo.py  neural_program.amph  parser_demo.py  semantic_demo.py  web_server.amph  web_server_interpreter_demo.py
scripts/: fix_command_imports.py  visual_command_integration.py
src/: __init__.py
tests/: conftest.py
(+128 files in other folders)
