[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "anamorphx-core"
version = "0.1.0"
description = "Core library for the AnamorphX language"
authors = [{name = "AnamorphX Team", email = "team@anamorph.dev"}]
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/quantros/anamorphX"

[tool.setuptools.packages.find]
where = ["src"]
